zeta-code/tui/src/app/snapshots/app__mode_tests__fullscreen_manager_own_selection.snap
---
source: zeta-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  ≡ .                                             
                                                  
  Idle (2)                                        
  ○ first session                                 
> ○ second session                                
  Archived (0)                                    
                                                  
                                                  
                                                  
                                                  
                                                  
  ╭────────────────────────────────────────────╮  
  │ > Build anything                           │  
  ╰────────────────────────── Automatic model ─╯  
                                                  
  Enter to open · Space to preview
