zeta-code/tui/src/app/snapshots/app__mode_tests__fullscreen_scroll_with_shared_draft.snap
---
source: zeta-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  ≡ .               [+]      [— / —] [Dashboard]  
                                                  
● message 10                                      
                                                  
● message 11                                      
                                                  
● message 12                                      
                                                  
             Jump to bottom (click) ↓             
  Queue 1: queued message · next                  
  ⏸ ask permissions on                            
  ╭────────────────────────────────────────────╮  
  │ > shared draft                             │  
  ╰────────────────────────── Automatic model ─╯  
                                                  
  Enter send  ·  shift+tab permissions  ·  /home
