zeta-code/tui/src/app/snapshots/app__mode_tests__inline_scroll_with_shared_draft.snap
---
source: zeta-code/tui/src/app/mode_tests.rs
assertion_line: 67
expression: render(&app)
---
                                                  
    ▄  ▄     Zeta Code v0.1.0                     
  ▗█▛██▜█▖   Automatic model · Access unknown     
  ▝▜████▛▘   .                                    
    ▝  ▘                                          
                                                  
● message 00                                      
                                                  
           Ctrl+End to jump to bottom ↓           
  Queue 1: queued message · next                  
                                                  
──────────────────────────────────────────────────
> shared draft                                    
──────────────────────────────────────────────────
                                                  
  ⏸ ask permissions on
